--- a/style2.CSS
+++ b/style2.CSS
@@ -46,3 +46,23 @@ display: inline-block;
     border-radius: 30px;
 }
 
+
+
+/*Designer la card*/
+
+.card{
+    width: 300px;
+    box-shadow: 4px 4px 12px #00000025; 
+    border-radius: 16px;
+    padding: 8px;
+    font-family: 'Inter','sans-serif';
+   
+}
+
+.card img{
+    display: block;
+    width: 100%;
+}
+.card .bouton{
+   margin-bottom: 0;
+}
